# qurl

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml  rust.yml  test.yml
src/: cli.rs  cmd.rs  debug.rs  error.rs  io.rs  lib.rs  main.rs  parser.rs  tests.rs  types.rs
src/types/: auth.rs  data.rs  headers.rs  multipart.rs  multivalue.rs  proxy.rs  redirect.rs  timeout.rs
tests/: cli.rs  error.rs  parsers.rs  types.rs
tests/resources/: mock.json
