[package]
name = "qurl"
version = "0.1.0"
authors = ["Radosław Stępień <rstepien@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "^0.10", features = ["blocking", "json"] }
tokio = { version = "0.2", features = ["full"] }
clap = "3.0.0-beta.2"
colored = "2"
regex = "1"