[package]
name = "qurl"
version = "0.2.0"
authors = ["Radosław Stępień <rstepien@protonmail.com>"]
edition = "2018"
description = "Quick command-line HTTP request utility written in Rust"
readme = "README.md"
repository = "https://github.com/Zeerooth/qurl"
license = "MIT"
keywords = ["http", "cli", "curl"]
categories = ["command-line-utilities", "api-bindings", "web-programming::http-client"]
exclude = ["tests", ".github"]

[dependencies]
reqwest = { version = "^0.10", features = ["blocking", "json"] }
tokio = { version = "0.2", features = ["macros"] }
clap = "3.0.0-beta.2"
colored = "2"

[dev-dependencies]
rstest = "0.6"
mockall = "0.8"
assert_cmd = "1.0"
predicates = "1"
httpmock = "0.5"
